monitoring/kube-state-metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: monitoring
  labels:
    app.kubernetes.io/part-of: kube-state-metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-state-metrics
  template:
    metadata:
%{ if vpa_metrics_enabled ~}
      annotations:
        checksum/vpa-metrics-config: ${vpa_metrics_config_hash}
%{ endif ~}
      labels:
        app: kube-state-metrics
        app.kubernetes.io/part-of: kube-state-metrics
    spec:
      priorityClassName: infra-observability
      serviceAccountName: kube-state-metrics
      containers:
        - name: kube-state-metrics
          image: registry.k8s.io/kube-state-metrics/kube-state-metrics:${kube_state_metrics_image_tag}
          args:
%{ if vpa_metrics_enabled ~}
            - --custom-resource-state-config-file=/etc/kube-state-metrics/vpa/config.yaml
%{ endif ~}
            - --metric-labels-allowlist=pods=[app.kubernetes.io/component,component,app.kubernetes.io/name,app.kubernetes.io/part-of,app],deployments=[app.kubernetes.io/part-of,app.kubernetes.io/name,app],statefulsets=[app.kubernetes.io/part-of,app.kubernetes.io/name,app],daemonsets=[app.kubernetes.io/part-of,app.kubernetes.io/name,app],persistentvolumeclaims=[app.kubernetes.io/component,app.kubernetes.io/name,app.kubernetes.io/instance,app.kubernetes.io/part-of,app.kubernetes.io/managed-by,pve- [...]
          ports:
            - name: metrics
              containerPort: 8080
            - name: telemetry
              containerPort: 8081
          readinessProbe:
            httpGet:
              path: /readyz
              port: telemetry
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /metrics
              port: telemetry
              scheme: HTTP
            periodSeconds: 30
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: ${kube_state_metrics_cpu_request}
              memory: ${kube_state_metrics_mem_request}
            limits:
              cpu: ${kube_state_metrics_cpu_limit}
              memory: ${kube_state_metrics_mem_limit}
%{ if vpa_metrics_enabled ~}
          volumeMounts:
            - name: vpa-metrics-config
              mountPath: /etc/kube-state-metrics/vpa
              readOnly: true
      volumes:
        - name: vpa-metrics-config
          configMap:
            name: kube-state-metrics-vpa
%{ endif ~}
---
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: monitoring
spec:
  selector:
    app: kube-state-metrics
  ports:
    - name: metrics
      port: 8080
      targetPort: metrics
