monitoring/prometheus-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-api
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: ${prometheus_api_basic_auth_secret_name}
    nginx.ingress.kubernetes.io/auth-realm: "prometheus-api"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${prometheus_api_hostname}
      secretName: ${prometheus_api_tls_secret_name}
  rules:
    - host: ${prometheus_api_hostname}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
